QC-41 - Add oData API call,  Renamed Smoke test to Regression for DCT & Added URL Validation for DCT

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -2132,6 +2132,18 @@
       <DependentUpon>Validate_ResetPassword_LoggedIn.rxrec</DependentUpon>
       <UserCode>true</UserCode>
     </Compile>
+    <Compile Include="oDataAPI.cs">
+      <BoundTo>884bb441-ac5e-4bbc-ae8c-8c2424eb3071</BoundTo>
+      <DependentUpon>oDataAPI.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>270bb582-a93c-401d-a247-b54451babb90</id>
+    </Compile>
+    <Compile Include="oDataAPI.UserCode.cs">
+      <BoundTo>884bb441-ac5e-4bbc-ae8c-8c2424eb3071</BoundTo>
+      <DependentUpon>oDataAPI.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>a5df6606-e5a9-481c-8dd2-001a53dd71ab</id>
+    </Compile>
     <Compile Include="ParticipantsPage\Change_Enroll_Status.cs">
       <id>c2d06657-c550-4e99-b482-e02ea65bd452</id>
       <BoundTo>98670887-05e3-4a42-a79b-3fb4f8470f17</BoundTo>
@@ -3914,6 +3926,11 @@
       <id>54e6a2c6-c2be-4b0a-bafa-d67d72886585</id>
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <recordtableid>c31fd7d3-6ab8-4b02-8d6c-eda02646b5c9</recordtableid>
+    </None>
+    <None Include="oDataAPI.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>884bb441-ac5e-4bbc-ae8c-8c2424eb3071</id>
+      <recordtableid>e5c5155b-1c7b-4dcd-9aad-e16fa12f0735</recordtableid>
     </None>
     <None Include="ParticipantsPage\Change_Enroll_Status.rxrec">
       <id>98670887-05e3-4a42-a79b-3fb4f8470f17</id>
