QC-41 : Improved DCT test script run time-

--- a/eSourcePlatform/DCT/DCT.csproj
+++ b/eSourcePlatform/DCT/DCT.csproj
@@ -427,15 +427,15 @@
       <UserCode>true</UserCode>
       <id>55161053-198d-47db-9062-9778ee64e32c</id>
     </Compile>
-    <Compile Include="TestIndentifier.cs">
+    <Compile Include="Test_Identifier.cs">
       <BoundTo>3f879aee-a619-4789-925f-1687484d4501</BoundTo>
-      <DependentUpon>TestIndentifier.rxrec</DependentUpon>
+      <DependentUpon>Test_Identifier.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
       <id>86db7085-ade8-468c-b7cb-e4f3c28900e0</id>
     </Compile>
-    <Compile Include="TestIndentifier.UserCode.cs">
+    <Compile Include="Test_Identifier.UserCode.cs">
       <BoundTo>3f879aee-a619-4789-925f-1687484d4501</BoundTo>
-      <DependentUpon>TestIndentifier.rxrec</DependentUpon>
+      <DependentUpon>Test_Identifier.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>5edacd4b-4460-4c8e-aa2a-673a1f66809c</id>
     </Compile>
@@ -606,7 +606,7 @@
       <recordtableid>1e474587-a2e6-4c33-b39d-7673a9867909</recordtableid>
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
     </None>
-    <None Include="TestIndentifier.rxrec">
+    <None Include="Test_Identifier.rxrec">
       <id>3f879aee-a619-4789-925f-1687484d4501</id>
       <recordtableid>d402610e-47e3-451e-84ef-01a160a71297</recordtableid>
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
