--- a/eSourcePlatform/DCT/DCT.csproj
+++ b/eSourcePlatform/DCT/DCT.csproj
@@ -532,6 +532,18 @@
       <UserCode>true</UserCode>
       <id>bd45bfd1-e06a-43e9-8593-cc3cb3736b82</id>
     </Compile>
+    <Compile Include="LogoutOctopus.cs">
+      <BoundTo>90d7b03b-d5e4-410f-880b-c4a08ace0722</BoundTo>
+      <DependentUpon>LogoutOctopus.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>193e8df6-6b1e-4b42-b5af-e63277705209</id>
+    </Compile>
+    <Compile Include="LogoutOctopus.UserCode.cs">
+      <BoundTo>90d7b03b-d5e4-410f-880b-c4a08ace0722</BoundTo>
+      <DependentUpon>LogoutOctopus.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>001b0914-acbb-4b5b-92e1-f02059c7d91f</id>
+    </Compile>
     <Compile Include="MoveValidation.cs">
       <BoundTo>c2acce52-d6fd-4d11-9b05-7a060ead2ff3</BoundTo>
       <DependentUpon>MoveValidation.rxrec</DependentUpon>
@@ -974,6 +986,11 @@
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
       <id>ccdc9179-f3ff-4029-a3b4-9c381a43d624</id>
       <recordtableid>4c535296-7123-44d2-aeaf-7b78d5a40580</recordtableid>
+    </None>
+    <None Include="LogoutOctopus.rxrec">
+      <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
+      <id>90d7b03b-d5e4-410f-880b-c4a08ace0722</id>
+      <recordtableid>83830357-899d-4fc4-b8e8-f7a982f59bec</recordtableid>
     </None>
     <None Include="MoveValidation.rxrec">
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
